apps/development/forgejo/controller/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-route
  namespace: forgejo
  annotations:
    external-dns.alpha.kubernetes.io/hostname: git.kdmorris.dev
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: tailscale-gateway
      namespace: tailscale
  hostnames:
    - "git.kdmorris.dev"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - group: ""
        kind: Service
        name: forgejo-http
        port: 3000
